src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>Analyst Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Award Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battle Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Interview Transcript</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Survey Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glossary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Email/Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Messaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Slide Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Function__c</fullName>
        <label>Business Function</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Insights &amp; Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Enablement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Enablement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Consulting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CS_Right_Now_Id__c</fullName>
        <externalId>true</externalId>
        <label>RightNow Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Content Versions (Competitor)</relationshipLabel>
        <relationshipName>Competitor_Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conference_Name__c</fullName>
        <label>Conference Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Prospect, Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Content Versions (Customer/Prospect)</relationshipLabel>
        <relationshipName>Customer_Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Classification__c</fullName>
        <label>Data Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Published__c</fullName>
        <label>Date Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Approved__c</fullName>
        <description>If marked as Yes, this document/asset can be shared outside Guidewire.</description>
        <label>External Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MP_Marketplace_SKU__c</fullName>
        <externalId>true</externalId>
        <label>Marketplace SKU</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Marketing_Approved_Content__c</fullName>
        <label>Marketing Approved Content</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_File_Name__c</fullName>
        <label>Original File Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Content Versions (Partner)</relationshipLabel>
        <relationshipName>Partner_Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before &amp; After</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI for InsuranceSuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capgemini Insurance Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catastrophe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contrast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataHub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InsuranceSuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Content Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinsurance Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spotlight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ViewPoint</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Target_Market__c</fullName>
        <label>Target Market</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMER</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Usage_Terms__c</fullName>
        <label>Usage Terms</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <recordTypes>
        <fullName>Customer_Support_Content</fullName>
        <active>true</active>
        <description>Used for all Customer Support content.</description>
        <label>Customer Support Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>MP_Marketplace</fullName>
        <active>true</active>
        <description>Record type for Marketplace library</description>
        <label>Marketplace</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Portal</fullName>
        <active>true</active>
        <label>Sales Portal</label>
    </recordTypes>
    <validationRules>
        <fullName>External_Approved_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISNEW() &amp;&amp;
ISPICKVAL( External_Approved__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>External_Approved__c</errorDisplayField>
        <errorMessage>This field is required before an asset can be published</errorMessage>
    </validationRules>
</CustomObject>